--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/x-date-pickers": "^8.27.0",
     "@reduxjs/toolkit": "^2.11.2",
     "@tanstack/react-query": "^5.90.19",
     "axios": "^1.13.2",
+    "dayjs": "^1.11.19",
+    "lucide-react": "^0.563.0",
     "react": "^19.2.0",
+    "react-calendar": "^6.0.0",
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-loading-indicators": "^1.0.1",
