--- a/backend/package.json
+++ b/backend/package.json
@@ -21,6 +21,7 @@
     "@types/express": "^5.0.6",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
+    "@types/nodemailer": "^7.0.10",
     "prisma": "^6.19.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
@@ -35,6 +36,7 @@
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
-    "mongodb": "^7.0.0"
+    "mongodb": "^7.0.0",
+    "nodemailer": "^8.0.1"
   }
 }
