--- a/backend/package.json
+++ b/backend/package.json
@@ -37,6 +37,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongodb": "^7.0.0",
-    "nodemailer": "^8.0.1"
+    "nodemailer": "^8.0.1",
+    "razorpay-node-typescript": "^1.1.4"
   }
 }
